# TESA2025---Pre-Day-1-of-Defense

./: .gitignore  INSTALLATION_COMPLETE.md  PACKAGE_SETUP.md  PACKAGE_USAGE.md  QUICK_START.md  README.md  SETUP_COMPLETE.md  command.txt  main.ipynb  main.py  preset.txt  pyproject.toml
defense/: __init__.py  image_loader.py  image_processor.py  object_detector.py  video_creator.py  video_frame_manipulator.py
defense/models/: __init__.py  combined_processing_config.py  frame_extraction_config.py  highlight_config.py  image_processing_config.py  object_detection_config.py
defense_utils/: __init__.py  __main__.py  image_processor.py  video_creator.py  video_frame_manipulator.py
defense_utils/models/: video_creation_config.py
