[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Defense-Utils"
version = "1.0.0"
description = "Image processing and video manipulation utilities for object detection and background removal"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "opencv-contrib-python>=4.11.0.86",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["defense_utils*"]
exclude = ["tests*", "videos*", "outputs*", "pictures*"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
